# reMember

./: .gitignore  README.md  index.html  pyproject.toml  script.js  test.apkg
lib/: main.js  util.js
reanki/: __main__.py  config.py  model.py  run.py
remember/: __main__.py  anki.py  bounding_box.py  config.py  debug.py  model.py  run.py  separators.py  util.py
src/: anki.js  config.js  index.html  main.js  util.js
src/lib/: anki.js  separators.js
